# RocoDex_qt

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  ATTRIBUTE_MATCHUP.md  DATA_CONTRACT.md  IMPLEMENTATION_PLAN.md  PRODUCT_SCOPE.md  QUALITY_REPORT.md  UI_UX_SPEC.md  WINDOWS_SFX.md  WORKFLOW.md
launcher/: RocoDexSingleFileLauncher.cpp
qml/: Main.qml
qml/components/: AttributeBadge.qml  DataManager.qml  FilterRail.qml  MatchupPanel.qml  PetListItem.qml  QuickPetStrip.qml  SkillCard.qml  StatBars.qml  qmldir
qml/pages/: DexPage.qml  PetDetailPage.qml  qmldir
resources/data/: dex-bundle.json
scripts/: build_single_file_release.ps1  deploy_windows.ps1  export_qt_data.mjs
src/: main.cpp
src/app/: DexController.cpp  DexController.h  DexRepository.cpp  DexRepository.h  DexRuntime.cpp  DexRuntime.h  PetListModel.cpp  PetListModel.h
src/models/: DexTypes.h
tests/: DexRuntimeTest.cpp
